--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -14,8 +14,9 @@
   background-size: 12px 14px;
   background-repeat: no-repeat;
   background-position: right center;
-  padding-right: 22px;
-  padding-bottom: 4px;
+  padding-right: $spacing-unit*3;
+  margin-right: $spacing-unit;
+  padding-bottom: $spacing-unit/2;
   line-height: 1.2;
   display: inline;
 }
