FIlter a dataset pages

--- a/_sass/_links.scss
+++ b/_sass/_links.scss
@@ -57,12 +57,11 @@ summary:focus {
   margin-right: 0.5em;
 
 }
-
- .basic a.btn  {
+ a.btn  {
    text-decoration: none;
  }
 
- .basic a.btn:visited  {
+ a.btn:visited  {
    color: white;
  }
 
