--- a/_sass/_typography.scss
+++ b/_sass/_typography.scss
@@ -45,18 +45,13 @@ address,li,p,.btn, summary {
 // Lists
 ul,ol {
   margin-bottom: $spacing-unit*4;
-  //padding-left: $spacing-unit*2;
 }
 li {
-  //margin: 0;
-  margin-bottom: $spacing-unit*3;
-  //padding: 0;
-  //padding-bottom: $spacing-unit;
+  margin: 0;
+  margin-left: $spacing-unit*3;
+  margin-bottom: $spacing-unit*2;
+  padding: 0;
 }
-
-
-
-
 
 // Font weights
 .font-weight--bold {
@@ -76,68 +71,68 @@ a {
   }
 }
 
-.font-xlarge,
-.heading-xlarge,
-h1 {
-  font-size: 32px;
-  line-height: 1.3;
-  margin: 15px 0 30px 0;
-  @media (min-width: 768px) {
-    font-size: 48px;
-    margin: 30px 0 60px 0;
-  }
-}
-
-.font-large,
-.heading-large,
-h2 {
-  font-size: 24px;
-  margin: 24px 0 10px 0;
-  @media (min-width: 768px) {
-    font-size: 36px;
-    margin: 48px 0 20px 0;
-  }
-}
-
-.font-medium,
-.heading-medium,
-h3 {
-  font-size: 19px;
-  margin: 24px 0 10px 0;
-  @media (min-width: 768px) {
-    font-size: 24px;
-    margin: 32px 0 20px 0;
-  }
-}
-
-.font-small,
-.heading-small,
-h4 {
-  font-size: 16px;
-  margin: 12px 0 8px 0;
-  @media (min-width: 768px) {
-    font-size: 19px;
-    margin: 24px 0 8px 0;
-  }
-}
-
-.font-xsmall,
-.heading-xsmall,
-h5 {
-  font-size: 16px;
-  @media (min-width: 768px) {
-    font-size: 19px;
-  }
-}
-
-.font-xxsmall,
-.heading-xxsmall,
-h6 {
-  font-size: 14px;
-  @media (min-width: 768px) {
-    font-size: 14px;
-  }
-}
+// .font-xlarge,
+// .heading-xlarge,
+// h1 {
+//   font-size: 32px;
+//   line-height: 1.3;
+//   margin: 15px 0 30px 0;
+//   @media (min-width: 768px) {
+//     font-size: 48px;
+//     margin: 30px 0 60px 0;
+//   }
+// }
+//
+// .font-large,
+// .heading-large,
+// h2 {
+//   font-size: 24px;
+//   margin: 24px 0 10px 0;
+//   @media (min-width: 768px) {
+//     font-size: 36px;
+//     margin: 48px 0 20px 0;
+//   }
+// }
+//
+// .font-medium,
+// .heading-medium,
+// h3 {
+//   font-size: 19px;
+//   margin: 24px 0 10px 0;
+//   @media (min-width: 768px) {
+//     font-size: 24px;
+//     margin: 32px 0 20px 0;
+//   }
+// }
+//
+// .font-small,
+// .heading-small,
+// h4 {
+//   font-size: 16px;
+//   margin: 12px 0 8px 0;
+//   @media (min-width: 768px) {
+//     font-size: 19px;
+//     margin: 24px 0 8px 0;
+//   }
+// }
+//
+// .font-xsmall,
+// .heading-xsmall,
+// h5 {
+//   font-size: 16px;
+//   @media (min-width: 768px) {
+//     font-size: 19px;
+//   }
+// }
+//
+// .font-xxsmall,
+// .heading-xxsmall,
+// h6 {
+//   font-size: 14px;
+//   @media (min-width: 768px) {
+//     font-size: 14px;
+//   }
+// }
 
 // hr
 
