--- a/_sass/_breadcrumbs.scss
+++ b/_sass/_breadcrumbs.scss
@@ -16,13 +16,14 @@
   background-position: left 30%;
   padding-top: 0;
   padding-left: 1em;
+  padding-right: 0.5em;
   line-height: 1.2;
   display: inline;
 }
 
 @media (min-width: 768px) {
   .breadcrumb__item {
-    background-position: left 20%;
+    background-position: left 50%;
   }
 }
 
