--- a/assets/main.scss
+++ b/assets/main.scss
@@ -1,6 +1,6 @@
----
-# Only this main Sass file needs front matter (these dashes are enough)
----
+// ---
+// # Only this main Sass file needs front matter (these dashes are enough)
+// ---
 
 .prototype {
 // Elements
